--- a/project/src/main/res/values-zh/strings.xml
+++ b/project/src/main/res/values-zh/strings.xml
@@ -96,6 +96,8 @@
     <string name="toolbar_search_cars">搜索租车</string>
     <!-- Label for Cars date button -->
     <string name="select_pickup_and_dropoff_dates">请选择取车和还车日期</string>
+    <!-- When user has picked both start and return date/time, we show something like: "Jan 21, 2:00PM - Jan 25, 3:00PM" -->
+    <string name="date_time_range_TEMPLATE">%1$s – %2$s</string>
     <!-- When user hasn't picked return date/time, we show something like: "Jan. 21, 2:00PM - Select return date" -->
     <string name="select_return_date_TEMPLATE">%1$s - 选择返回日期</string>
     <!-- Label for pick-up time picker -->
@@ -137,7 +139,6 @@
     <string name="car_model_name_template">%1$s 或相近车型</string>
     <string name="car_model_unknown_template">具体型号未知</string>
 
-    <string name="preparing_checkout_message">准备付款…</string>
     <!-- Desk & vehicle at terminal -->
     <string name="desk_and_vehicle_terminal">航站楼有服务台和车辆</string>
     <!-- Car checkout cost breakdown total due today -->
@@ -149,8 +150,6 @@
     <!-- Car checkout rental fare breakdown types -->
     <!--Cost breakdown type base -->
     <string name="car_rental_breakdown_base">租车</string>
-    <!--Cost breakdown type taxes and fees -->
-    <string name="car_rental_breakdown_taxes_and_fees">估算的税费</string>
     <!--Cost breakdown type insurance -->
     <string name="car_rental_breakdown_insurance">保险</string>
     <!--Cost breakdown type drop off charge -->
@@ -194,7 +193,7 @@
     <!-- Show to user when the their traveler information is invalid -->
     <string name="reservation_invalid_name">姓名不能包含数字或特殊字符。</string>
     <!-- Show to user when their phone number is invalid -->
-    <string name="reservation_invalid_phone">电话号码长度必须在 1 至 20 位数之间。</string>
+    <string name="reservation_invalid_phone">电话号码长度必须在 4 至 20 位数之间。</string>
 
     <!-- Shown to a user when there is an issue with their credit card -->
     <string name="reservation_payment_failed">嗯…您的付款没有成功。请仔细检查付款信息，然后再试一次。</string>
@@ -565,8 +564,6 @@
     <!-- LX Strings -->
     <!-- Slide to book -->
     <string name="lx_slider_text">滑动屏幕，开始预订</string>
-    <!-- Total with tax -->
-    <string name="lx_total_with_tax">总计（含税）</string>
     <!-- Enter contact details-->
     <string name="lx_enter_contact_details">请输入详细联系信息</string>
     <!-- LX search error -->
@@ -620,6 +617,8 @@
     <string name="lx_ground_transport_bags_text">%1$s 个旅行袋</string>
     <!-- Ground Transport passengers text-->
     <string name="lx_ground_transport_passengers_text">%1$s 位乘客</string>
+    <!-- Incorrect date search for LX -->
+    <string name="lx_start_date_error">此日期已过去了，请选择新的日期。</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
@@ -809,9 +808,9 @@
     <!-- Caption for percent of guests who recommend this hotel including the percentage, i.e. "90% recommend" -->
     <string name="n_recommend_TEMPLATE">%s%% 用户推荐</string>
     <!-- A message stating this hotel is all sold out for the given dates searched -->
-    <string name="sorry_rooms_sold_out">很抱歉，Expedia 网站上已经没有空房。</string>
+    <string name="sorry_rooms_sold_out_TEMPLATE">很抱歉，{brand} 上已无空房。</string>
     <!-- A message stating this hotel is sold out on Expedia -->
-    <string name="sold_out_on_expedia">Expedia 网站已无空房</string>
+    <string name="sold_out_on_TEMPLATE">{brand} 上已售完</string>
     <!-- Hotel gallery title -->
     <string name="photos_for_TEMPLATE">%s的照片</string>
     <!-- Caption for number of rooms left count, i.e. "4 rooms left" -->
@@ -894,7 +893,7 @@
     <!-- Sign In -->
     <string name="Sign_In">登录</string>
     <!-- Sign in with Expedia -->
-    <string name="Sign_in_with_Expedia">登录 Expedia</string>
+    <string name="Sign_in_with_TEMPLATE">登录 {brand}</string>
     <!-- Sign in with the current brand -->
     <string name="sign_in_with_brand_TEMPLATE">登录 {brand}</string>
     <!-- or -->
@@ -904,7 +903,7 @@
 
     <!-- Restricted Profile -->
     <!-- Restricted profile sign in message -->
-    <string name="restricted_profile_sign_in_message">要登录 Expedia，您的设备必须使用不受限制的用户配置文件。</string>
+    <string name="restricted_profile_sign_in_message_TEMPLATE">要登录 {brand}，您的设备必须使用不受限制的用户配置文件。</string>
 
     <!-- Nav Dropdown menu -->
     <!-- Flights -->
@@ -1007,7 +1006,7 @@
     <!-- Find Itinerary # -->
     <string name="find_itinerary_pound">查找行程编号</string>
     <!-- Expedia Itinerary -->
-    <string name="expedia_itinerary">Expedia 行程编号</string>
+    <string name="itinerary_TEMPLATE">{brand} 行程编号</string>
     <!-- Label for exclusive +silver phone number, "Expedia +silver Customer Support" -->
     <string name="Expedia_plus_Silver_Customer_Support">Expedia+ 银牌客户支持</string>
     <!-- Label for exclusive +gold phone number, "Expedia +gold Customer Support" -->
@@ -1560,8 +1559,8 @@
     <string name="outbound_TEMPLATE">飞往 %s 的航班</string>
     <!-- Template for inbound flight selection.  %s is the name of a city (e.g., "Inbound to San Francisco") -->
     <string name="inbound_TEMPLATE">抵达 %s 的航班</string>
-    <!-- Error when we simple can't connect to E3 servers -->
-    <string name="error_server">很抱歉，我们无法连接 Expedia 的服务器。请稍后重试。</string>
+    <!-- Template string for error when we simple can't connect to E3 servers-->
+    <string name="error_server_TEMPLATE">很抱歉，我们无法连接 {brand} 的服务器。请稍后再试一次。</string>
     <!-- Sort by departure timelabel -->
     <string name="sort_description_departure">出发</string>
     <!-- Sort by arrival time label -->
@@ -1652,7 +1651,8 @@
     <string name="calendar_instructions_date_range_with_nights_TEMPLATE">%1$s - %2$s (%3$s)</string>
     <!-- Calendar instruction text hotels no dates selected - "Select Check-in Date" -->
     <string name="calendar_instructions_hotels_no_dates_selected">选择入住日期</string>
-
+    <!-- Calendar instruction text hotels date range template. %1$s = Formatted start date, %2$s = formatted end date. E.g. May 12 - May 15 -->
+    <string name="calendar_instructions_date_range_with_guests_TEMPLATE">{startdate} - {enddate}, {guests} 位客人</string>
     <!-- Flight details fragment -->
     <!-- Book now info label.  %s is the price.  E.g., "One way for $994" -->
     <string name="one_way_price_TEMPLATE">单程价格为 &lt;b&gt;%s&lt;/b&gt;</string>
@@ -1811,10 +1811,14 @@
     <string name="menu_checkout">付款</string>
     <!-- Our best price gaurentee string -->
     <string name="best_price_guarantee">安心价格保证</string>
+    <!-- Expedia Rate - Non merchant default infosite messaging -->
+    <string name="non_merchant_rate_TEMPLATE">{brand} 评分</string>
     <!-- Free cancellation template string where we insert the date the free cancellation expires -->
     <string name="free_cancellation_date_TEMPLATE">&lt;b&gt;%s&lt;/b&gt;前&lt;b&gt;免费取消预订&lt;/b&gt;</string>
     <!-- Sign out -->
     <string name="sign_out">退出</string>
+    <!-- AB Test 3x messaging for hotel points -->
+    <string name="youll_earn_points_ab_test_3x_TEMPLATE">在 App 上预订享 3 倍积分 - 您将获得 %1$s 分！</string>
     <!-- You'll earn points for this trip -->
     <string name="youll_earn_points_TEMPLATE">此次预订将累积 %1$s 分！</string>
     <!-- Blurb text displayed on account sign in button when already signed in -->
@@ -1982,7 +1986,7 @@
     <!-- save billing info -->
     <string name="save_billing_info">保存帐单信息</string>
     <!-- save billing info message -->
-    <string name="save_billing_info_message">是否将此付款方式保存到您的 Expedia 帐户，以方便将来预订？</string>
+    <string name="save_billing_info_message_TEMPLATE">是否将此付款方式保存到您的 {brand} 帐户，以方便将来预订？</string>
     <!-- save -->
     <string name="save">保存</string>
 
@@ -1990,7 +1994,7 @@
     <!-- save traveler -->
     <string name="save_traveler">保存旅客</string>
     <!-- Save traveler name Template -->
-    <string name="save_traveler_message_TEMPLATE">是否将 %1$s 的信息保存到您的 Expedia 帐户，以方便将来预订？</string>
+    <string name="save_traveler_message_TEMPLATE">是否将 {name} 的信息保存到您的 {brand} 帐户，以方便将来预订？</string>
     <!-- no thanks -->
     <string name="no_thanks">不，谢谢</string>
 
@@ -2121,7 +2125,7 @@
     <!-- Button label for tracking recently booked flights to FlightTrack (another application) -->
     <string name="add_to_flighttrack">使用 FlightTrack 跟踪航班</string>
     <!-- Button label for calling expedia customer support -->
-    <string name="call_expedia_customer_support">致电 Expedia 客户支持部门</string>
+    <string name="call_customer_support_TEMPLATE">致电 {brand} 客户支持</string>
     <!-- Add Insurance label -->
     <string name="add_insurance">添加保险</string>
     <!-- Insurance -->
@@ -2156,11 +2160,11 @@
     <!-- Location for calendar event.  %1$s is the name of the starting airport, %2$s is the city it is in, e.g. "San Francisco Int'l Airport, San Francisco" -->
     <string name="calendar_flight_location_TEMPLATE">%1$s, %2$s</string>
     <!-- Part of the description, showing the itinerary #.  %s is the itinerary number, e.g. "Expedia Itinerary #: 3532532" -->
-    <string name="calendar_flight_desc_itinerary_TEMPLATE">Expedia 行程编号：%s</string>
+    <string name="calendar_flight_desc_itinerary_TEMPLATE">{brand} 行程编号：{itinerary}</string>
     <!-- Part of the description, showing a link to directions.  %s is the directions link, e.g. "Directions to airport: http://url-to-map-to-airport" -->
     <string name="calendar_flight_desc_directions_TEMPLATE">前往机场的路线：%s</string>
     <!-- Part of the description, showing a phone # for support.  %s is the phone number for support, e.g. "Expedia Customer Support: 222-222-2222" -->
-    <string name="calendar_flight_desc_support_TEMPLATE">Expedia 客户支持电话：%s</string>
+    <string name="calendar_flight_desc_support_TEMPLATE">{brand} 客户支持：{phone}</string>
 
     <!-- Add to calendar (hotels) -->
     <!-- Title for calendar entry for when you check into a hotel -->
@@ -2214,11 +2218,11 @@
     <!-- Error shown to user if we don't know what exactly what went wrong. -->
     <string name="error_flight_unhandled">很抱歉，我们此刻似乎无法处理您的订单。请再试一次。</string>
     <!-- Error shown to user if we don't know what exactly what went wrong.  %s is the itinerary users can quote to allow agents to pull up their case. -->
-    <string name="error_flight_unhandled_TEMPLATE">很抱歉，我们此刻似乎无法处理您的订单。请再试一次，或致电 Expedia 客户支持并提供此行程编号：%s</string>
+    <string name="error_flight_unhandled_TEMPLATE">很抱歉，我们此刻似乎无法处理您的订单。请再试一次或致电 {brand} 客服，并提供此行程编号：{itinerary}</string>
     <!-- Error shown to user if their flight is no longer available (sold out, session expired, whatever) -->
-    <string name="error_flight_no_longer_available_expedia">非常抱歉，您选择的航班在 Expedia 网站上已经没有余票。</string>
+    <string name="error_flight_no_longer_available_TEMPLATE">非常抱歉，您选择的航班在 {brand} 上已经没有余票。</string>
     <!-- Error shown to user if one of multiple flights is no longer available (sold out, session expired, whatever) -->
-    <string name="error_flights_no_longer_available_expedia">非常抱歉，您选择的某个航班在 Expedia 网站上已经没有余票。</string>
+    <string name="error_flights_no_longer_available_TEMPLATE">非常抱歉，您选择的某个航班在 {brand} 上已经没有余票。</string>
     <!-- Error shown to user if their flight is no longer available or expired -->
     <string name="error_flight_hold_expired">很抱歉，您预留的此航班已经过期。</string>
     <!-- Error shown to user if one of multiple flights is no longer available or expired -->
@@ -2434,11 +2438,7 @@
     <!-- Message displayed when app is trying to find where it is (via network/GPS) -->
     <string name="progress_finding_location">正在查找当前位置…</string>
     <!-- Message displayed when app is searching a location for hotels -->
-    <string name="progress_searching_hotels">正在搜索酒店…</string>
-    <!-- Message displayed when app is searching a location for hotels -->
     <string name="progress_searching_message">正在搜索！</string>
-    <!-- Message displayed when app is searching a location for hotels -->
-    <string name="progress_searching_hotels_working_hard">我们正在努力为您寻找最好的特价酒店。</string>
     <!-- Message displayed when app is searching a location for hotels -->
     <string name="progress_searching_hotels_hundreds">正在为您搜索数千家酒店！</string>
     <!-- Message displayed when app is searching for a particular hotel -->
@@ -2452,7 +2452,7 @@
     <!-- Message displayed when no hotel rooms are available -->
     <string name="error_no_hotel_rooms_available">没有酒店空房</string>
     <!-- Message displayed when all the hotel rooms at a hotel are sold out -->
-    <string name="error_hotel_is_now_sold_out_expedia">非常抱歉，这家酒店在 Expedia 网站上已经订完。</string>
+    <string name="error_hotel_is_now_sold_out_TEMPLATE">非常抱歉，这家酒店在 {brand} 上已经订完。</string>
 
     <!-- Suggestion adapter -->
     <!-- Suggestion to search the user's current location (instead of entering a specific place) -->
@@ -2465,6 +2465,8 @@
     <string name="per_night">/晚</string>
     <!-- The label for abbreviated price per night - "$120/nt", for example -->
     <string name="per_nt">/晚</string>
+    <!-- The label for abbreviated price per night - "$120/nt", for example -->
+    <string name="per_nt_TEMPLATE">{price}/晚</string>
     <!-- Label shown when a hotel has no user ratings -->
     <string name="not_rated">没有评分</string>
     <!-- Label indicating the percent savings for booking this hotel.  %2.0f is the savings amount. -->
@@ -2516,6 +2518,10 @@
     <string name="minus_x_percent">-%2.0f%%</string>
     <!-- Recommended string shown in hotel details -->
     <string name="x_percent_guests_recommend">%2.0f%% 的住客推荐该酒店。</string>
+    <!-- new material Hotel results cell guest rating -->
+    <string name="customer_rating_percent_Template">{rating}{percent}</string>
+    <!-- new material Hotel results cell guest recommend-->
+    <string name="guest_recommend">的住客推荐</string>
 
     <!-- Amenity strings -->
     <!-- Text that indicates no amenities at this property -->
@@ -2635,7 +2641,7 @@
     <string name="etp_pay_later_payment_info_text">所需的付款信息只是用来保留您的预订。</string>
     <string name="etp_pay_later_cancellation_text">在酒店的取消截止日期之前都可以免费取消。</string>
     <string name="etp_pay_now_option_text">立即在线付款</string>
-    <string name="etp_pay_now_charges_text">Expedia 将处理您的付款信息。</string>
+    <string name="etp_pay_now_charges_text_TEMPLATE">{brand} 将处理您的付款信息。</string>
     <string name="etp_pay_now_currency_text_TEMPLATE">您将以您的当地货币 %s 付款。</string>
     <string name="etp_pay_now_cancellation_text">在酒店的取消截止日期之前都可以免费取消。</string>
     <string name="etp_select_room">选择房间</string>
@@ -2726,7 +2732,7 @@
     <!-- Itinerary number label -->
     <string name="itinerary_number">行程编号</string>
     <!-- Contact info for a country with a known support line where %s represents the phone number -->
-    <string name="contact_phone_template">如果您对预订有任何问题，请致电 %s 与 Expedia 联系。</string>
+    <string name="contact_phone_TEMPLATE">若对您的预订有任何疑问，请拨电 {phone} 联系 {brand}。</string>
 
 
     <!-- Rate template strings -->
@@ -2759,7 +2765,7 @@
     <!-- Label for Expedia +gold rewards program name -->
     <string name="Expedia_plus_gold">Expedia +金牌</string>
     <!-- Label for signin screen -->
-    <string name="expedia_account">Expedia 帐户</string>
+    <string name="account_TEMPLATE">{brand} 帐户</string>
     <!-- Label for loading user profile from Expedia -->
     <string name="loading_brand_account_TEMPLATE">正在加载 {brand} 帐户</string>
     <!-- Label for password recovery -->
@@ -2833,25 +2839,25 @@
     <!-- Label for "Booking Support" button in info page -->
     <string name="booking_support">预订支持</string>
     <!-- Title for different ways to connect to Expedia -->
-    <string name="contact_expedia_via">联系 Expedia…</string>
+    <string name="contact_via_TEMPLATE">通过以下方式联系 {brand}</string>
     <!-- Contact Expedia via phone -->
     <string name="contact_expedia_phone">电话</string>
     <!-- Contact Expedia via website -->
     <string name="contact_expedia_website">网站</string>
     <!-- Label for "Expedia website" button in info page -->
-    <string name="expedia_website">Expedia 网站</string>
+    <string name="website_TEMPLATE">{brand} 网站</string>
     <!-- Label for "app support" button in info page -->
-    <string name="app_support">应用程序支持</string>
+    <string name="app_support_TEMPLATE">App 支持</string>
     <!-- Label for link to terms and conditions -->
     <string name="info_label_terms_conditions">条款和条件</string>
     <!-- Label for link to privacy policy -->
     <string name="info_label_privacy_policy">隐私政策</string>
     <!-- Copyright information -->
-    <string name="copyright_TEMPLATE">© 版权所有 2012–%1$s Expedia, Inc.\n保留所有权利。</string>
+    <string name="copyright_TEMPLATE">© 版权所有 2012-{year} {brand}, Inc.\n保留所有权利。</string>
     <!-- Dialog Title telling the user they have been signed of their account and all data saved about them has been removed -->
     <string name="dialog_title_signed_out_and_cleared_private_data">已退出帐户并清除数据</string>
     <!-- Dialog Message telling the user they have been signed of their account and all data saved about them has been removed -->
-    <string name="dialog_message_signed_out_and_cleared_private_data">您已退出 Expedia 帐户，所有保存的帐单和联系信息都已删除。</string>
+    <string name="dialog_message_signed_out_and_cleared_private_data_TEMPLATE">您已退出 {brand} 帐户，所有保存的帐单和联系信息都已删除。</string>
     <!-- Dialog Title telling the user they have been signed of their account and all data saved about them has been removed -->
     <string name="dialog_title_cleared_private_data">隐私数据已清除</string>
     <!-- Dialog Message telling the user they have been signed of their account and all data saved about them has been removed -->
@@ -3570,5 +3576,7 @@
 
     <!-- Used in hotel search for specifying traveler -->
     <string name="child_age_label">选择每个儿童的年龄</string>
+
+    <string name="lob_not_supported_error_message">抱歉，您所在的位置尚未提供{lob}预订服务。</string>
 
 </resources>
