--- a/project/src/main/res/values-ko/strings.xml
+++ b/project/src/main/res/values-ko/strings.xml
@@ -96,6 +96,8 @@
     <string name="toolbar_search_cars">렌터카 검색</string>
     <!-- Label for Cars date button -->
     <string name="select_pickup_and_dropoff_dates">인수 및 반납 날짜 선택</string>
+    <!-- When user has picked both start and return date/time, we show something like: "Jan 21, 2:00PM - Jan 25, 3:00PM" -->
+    <string name="date_time_range_TEMPLATE">%1$s – %2$s</string>
     <!-- When user hasn't picked return date/time, we show something like: "Jan. 21, 2:00PM - Select return date" -->
     <string name="select_return_date_TEMPLATE">%1$s – 반납 날짜를 선택하세요.</string>
     <!-- Label for pick-up time picker -->
@@ -137,7 +139,6 @@
     <string name="car_model_name_template">%1$s 또는 동급 차량</string>
     <string name="car_model_unknown_template">정확한 모델 없음</string>
 
-    <string name="preparing_checkout_message">결제 준비 중…</string>
     <!-- Desk & vehicle at terminal -->
     <string name="desk_and_vehicle_terminal">터미널 내 데스크 및 차량</string>
     <!-- Car checkout cost breakdown total due today -->
@@ -149,8 +150,6 @@
     <!-- Car checkout rental fare breakdown types -->
     <!--Cost breakdown type base -->
     <string name="car_rental_breakdown_base">렌터카</string>
-    <!--Cost breakdown type taxes and fees -->
-    <string name="car_rental_breakdown_taxes_and_fees">세금 및 수수료 예상액</string>
     <!--Cost breakdown type insurance -->
     <string name="car_rental_breakdown_insurance">보험</string>
     <!--Cost breakdown type drop off charge -->
@@ -194,7 +193,7 @@
     <!-- Show to user when the their traveler information is invalid -->
     <string name="reservation_invalid_name">이름에는 숫자나 특수 문자가 포함되면 안 됩니다.</string>
     <!-- Show to user when their phone number is invalid -->
-    <string name="reservation_invalid_phone">전화번호는 1~20자 길이여야 합니다.</string>
+    <string name="reservation_invalid_phone">전화번호는 4 ~ 20자 길이여야 합니다.</string>
 
     <!-- Shown to a user when there is an issue with their credit card -->
     <string name="reservation_payment_failed">잠시만요… 결제가 제대로 되지 않았어요. 결제 세부 정보를 확인하고 다시 시도해 주세요.</string>
@@ -565,8 +564,6 @@
     <!-- LX Strings -->
     <!-- Slide to book -->
     <string name="lx_slider_text">밀어서 예약하기</string>
-    <!-- Total with tax -->
-    <string name="lx_total_with_tax">세금 포함 총계</string>
     <!-- Enter contact details-->
     <string name="lx_enter_contact_details">연락처 정보 입력</string>
     <!-- LX search error -->
@@ -620,6 +617,8 @@
     <string name="lx_ground_transport_bags_text">짐 %1$s개</string>
     <!-- Ground Transport passengers text-->
     <string name="lx_ground_transport_passengers_text">승객 %1$s명</string>
+    <!-- Incorrect date search for LX -->
+    <string name="lx_start_date_error">이 날짜는 지났습니다. 새로운 날짜를 선택해 주세요.</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
@@ -809,9 +808,9 @@
     <!-- Caption for percent of guests who recommend this hotel including the percentage, i.e. "90% recommend" -->
     <string name="n_recommend_TEMPLATE">%s%% 고객이 추천</string>
     <!-- A message stating this hotel is all sold out for the given dates searched -->
-    <string name="sorry_rooms_sold_out">죄송합니다. 익스피디아에서 모든 객실이 매진되었습니다.</string>
+    <string name="sorry_rooms_sold_out_TEMPLATE">죄송합니다. {brand}에서 모든 객실이 매진되었습니다.</string>
     <!-- A message stating this hotel is sold out on Expedia -->
-    <string name="sold_out_on_expedia">익스피디아에서 매진됨</string>
+    <string name="sold_out_on_TEMPLATE">{brand}에서 매진</string>
     <!-- Hotel gallery title -->
     <string name="photos_for_TEMPLATE">%s 사진</string>
     <!-- Caption for number of rooms left count, i.e. "4 rooms left" -->
@@ -894,7 +893,7 @@
     <!-- Sign In -->
     <string name="Sign_In">로그인</string>
     <!-- Sign in with Expedia -->
-    <string name="Sign_in_with_Expedia">익스피디아 계정으로 로그인</string>
+    <string name="Sign_in_with_TEMPLATE">{brand} 계정으로 로그인</string>
     <!-- Sign in with the current brand -->
     <string name="sign_in_with_brand_TEMPLATE">{brand} 계정으로 로그인</string>
     <!-- or -->
@@ -904,7 +903,7 @@
 
     <!-- Restricted Profile -->
     <!-- Restricted profile sign in message -->
-    <string name="restricted_profile_sign_in_message">익스피디아에 로그인하려면 기기에서 무제한 사용자 프로필을 사용하셔야 합니다.</string>
+    <string name="restricted_profile_sign_in_message_TEMPLATE">{brand}에 로그인하려면 기기에서 무제한 사용자 프로필을 사용하셔야 합니다.</string>
 
     <!-- Nav Dropdown menu -->
     <!-- Flights -->
@@ -1007,7 +1006,7 @@
     <!-- Find Itinerary # -->
     <string name="find_itinerary_pound">일정 번호 찾기</string>
     <!-- Expedia Itinerary -->
-    <string name="expedia_itinerary">익스피디아 일정 번호</string>
+    <string name="itinerary_TEMPLATE">{brand} 일정 번호</string>
     <!-- Label for exclusive +silver phone number, "Expedia +silver Customer Support" -->
     <string name="Expedia_plus_Silver_Customer_Support">익스피디아 +실버 고객 지원</string>
     <!-- Label for exclusive +gold phone number, "Expedia +gold Customer Support" -->
@@ -1560,8 +1559,8 @@
     <string name="outbound_TEMPLATE">%s행 출국 항공편</string>
     <!-- Template for inbound flight selection.  %s is the name of a city (e.g., "Inbound to San Francisco") -->
     <string name="inbound_TEMPLATE">%s행 귀국 항공편</string>
-    <!-- Error when we simple can't connect to E3 servers -->
-    <string name="error_server">죄송합니다. 익스피디아 서버에 연결할 수 없습니다. 나중에 다시 시도해 주세요.</string>
+    <!-- Template string for error when we simple can't connect to E3 servers-->
+    <string name="error_server_TEMPLATE">죄송합니다. 지금 {brand} 서버에 연결할 수 없습니다.  나중에 다시 시도해 주세요.</string>
     <!-- Sort by departure timelabel -->
     <string name="sort_description_departure">출발</string>
     <!-- Sort by arrival time label -->
@@ -1652,7 +1651,8 @@
     <string name="calendar_instructions_date_range_with_nights_TEMPLATE">%1$s - %2$s (%3$s)</string>
     <!-- Calendar instruction text hotels no dates selected - "Select Check-in Date" -->
     <string name="calendar_instructions_hotels_no_dates_selected">체크인 날짜 선택</string>
-
+    <!-- Calendar instruction text hotels date range template. %1$s = Formatted start date, %2$s = formatted end date. E.g. May 12 - May 15 -->
+    <string name="calendar_instructions_date_range_with_guests_TEMPLATE">{startdate} ~ {enddate}, 숙박객 {guests} 명</string>
     <!-- Flight details fragment -->
     <!-- Book now info label.  %s is the price.  E.g., "One way for $994" -->
     <string name="one_way_price_TEMPLATE">편도 항공 가격: &lt;b&gt;%s&lt;/b&gt;</string>
@@ -1811,10 +1811,14 @@
     <string name="menu_checkout">예약하기</string>
     <!-- Our best price gaurentee string -->
     <string name="best_price_guarantee">최저가격보장</string>
+    <!-- Expedia Rate - Non merchant default infosite messaging -->
+    <string name="non_merchant_rate_TEMPLATE">{brand} 요금</string>
     <!-- Free cancellation template string where we insert the date the free cancellation expires -->
     <string name="free_cancellation_date_TEMPLATE">&lt;b&gt;무료 취소 마감기한&lt;/b&gt;: &lt;b&gt;%s&lt;/b&gt;</string>
     <!-- Sign out -->
     <string name="sign_out">로그아웃</string>
+    <!-- AB Test 3x messaging for hotel points -->
+    <string name="youll_earn_points_ab_test_3x_TEMPLATE">%1$s포인트가 적립됩니다. 앱에서 예약하면 포인트가 3배 적립됩니다!</string>
     <!-- You'll earn points for this trip -->
     <string name="youll_earn_points_TEMPLATE">이 예약으로 %1$s포인트가 적립됩니다!</string>
     <!-- Blurb text displayed on account sign in button when already signed in -->
@@ -1982,7 +1986,7 @@
     <!-- save billing info -->
     <string name="save_billing_info">청구 정보 저장</string>
     <!-- save billing info message -->
-    <string name="save_billing_info_message">앞으로 더욱 간편한 구매를 위해 고객님의 익스피디아 계정에 이 결제 방법을 저장하시겠어요?</string>
+    <string name="save_billing_info_message_TEMPLATE">나중에 간편하게 결제하시도록 이 결제 방법을 고객님의 {brand} 계정에 저장할까요?</string>
     <!-- save -->
     <string name="save">저장</string>
 
@@ -1990,7 +1994,7 @@
     <!-- save traveler -->
     <string name="save_traveler">여행객 저장</string>
     <!-- Save traveler name Template -->
-    <string name="save_traveler_message_TEMPLATE">앞으로 더욱 간편한 구매를 위해 고객님의 익스피디아 계정에 %1$s 님 정보를 저장하시겠어요?</string>
+    <string name="save_traveler_message_TEMPLATE">나중에 간편하게 결제하시도록 {name} 님의 정보를 고객님의 {brand} 계정에 저장할까요?</string>
     <!-- no thanks -->
     <string name="no_thanks">나중에 하기</string>
 
@@ -2121,7 +2125,7 @@
     <!-- Button label for tracking recently booked flights to FlightTrack (another application) -->
     <string name="add_to_flighttrack">FlightTrack으로 항공 정보 확인</string>
     <!-- Button label for calling expedia customer support -->
-    <string name="call_expedia_customer_support">익스피디아 고객 지원에 연락</string>
+    <string name="call_customer_support_TEMPLATE">{brand} 고객 지원에 전화</string>
     <!-- Add Insurance label -->
     <string name="add_insurance">보험 추가</string>
     <!-- Insurance -->
@@ -2156,11 +2160,11 @@
     <!-- Location for calendar event.  %1$s is the name of the starting airport, %2$s is the city it is in, e.g. "San Francisco Int'l Airport, San Francisco" -->
     <string name="calendar_flight_location_TEMPLATE">%1$s, %2$s</string>
     <!-- Part of the description, showing the itinerary #.  %s is the itinerary number, e.g. "Expedia Itinerary #: 3532532" -->
-    <string name="calendar_flight_desc_itinerary_TEMPLATE">익스피디아 일정 번호: %s</string>
+    <string name="calendar_flight_desc_itinerary_TEMPLATE">{brand} 일정 번호: {itinerary}</string>
     <!-- Part of the description, showing a link to directions.  %s is the directions link, e.g. "Directions to airport: http://url-to-map-to-airport" -->
     <string name="calendar_flight_desc_directions_TEMPLATE">공항까지 가는 길 안내: %s</string>
     <!-- Part of the description, showing a phone # for support.  %s is the phone number for support, e.g. "Expedia Customer Support: 222-222-2222" -->
-    <string name="calendar_flight_desc_support_TEMPLATE">익스피디아 고객 지원: %s</string>
+    <string name="calendar_flight_desc_support_TEMPLATE">{brand} 고객 지원: {phone}</string>
 
     <!-- Add to calendar (hotels) -->
     <!-- Title for calendar entry for when you check into a hotel -->
@@ -2214,11 +2218,11 @@
     <!-- Error shown to user if we don't know what exactly what went wrong. -->
     <string name="error_flight_unhandled">죄송합니다. 현재 고객님의 주문을 처리해 드릴 수 없습니다. 다시 시도해 주세요.</string>
     <!-- Error shown to user if we don't know what exactly what went wrong.  %s is the itinerary users can quote to allow agents to pull up their case. -->
-    <string name="error_flight_unhandled_TEMPLATE">죄송합니다. 현재 고객님의 주문을 처리해 드릴 수 없습니다. 다시 시도하시거나 익스피디아 고객 지원에 연락하여 이 일정 번호를 말씀해 주세요: %s</string>
+    <string name="error_flight_unhandled_TEMPLATE">죄송합니다. 현재 고객님의 주문을 처리해 드릴 수 없습니다. 다시 시도해 보시거나 {brand} 고객 지원에 전화하여 이 일정 번호를 말씀해 주세요: {itinerary}</string>
     <!-- Error shown to user if their flight is no longer available (sold out, session expired, whatever) -->
-    <string name="error_flight_no_longer_available_expedia">정말 죄송합니다. 고객님 항공편은 익스피디아에서 더 이상 이용하실 수 없습니다.</string>
+    <string name="error_flight_no_longer_available_TEMPLATE">정말 죄송합니다. 고객님의 항공편은 더 이상 {brand}에서 제공되지 않습니다.</string>
     <!-- Error shown to user if one of multiple flights is no longer available (sold out, session expired, whatever) -->
-    <string name="error_flights_no_longer_available_expedia">정말 죄송합니다. 고객님 항공편 중 한 개는 익스피디아에서 더 이상 이용하실 수 없습니다.</string>
+    <string name="error_flights_no_longer_available_TEMPLATE">정말 죄송합니다. 고객님의 항공편 중 한 편은 더 이상 {brand}에서 제공되지 않습니다.</string>
     <!-- Error shown to user if their flight is no longer available or expired -->
     <string name="error_flight_hold_expired">죄송합니다. 이 항공편에 대한 고객님의 확보가 만료되었습니다.</string>
     <!-- Error shown to user if one of multiple flights is no longer available or expired -->
@@ -2434,11 +2438,7 @@
     <!-- Message displayed when app is trying to find where it is (via network/GPS) -->
     <string name="progress_finding_location">현재 위치 찾는 중…</string>
     <!-- Message displayed when app is searching a location for hotels -->
-    <string name="progress_searching_hotels">호텔 검색 중…</string>
-    <!-- Message displayed when app is searching a location for hotels -->
     <string name="progress_searching_message">찾는 중이에요!</string>
-    <!-- Message displayed when app is searching a location for hotels -->
-    <string name="progress_searching_hotels_working_hard">고객님에게 딱 맞는 특가 호텔을 찾고 있어요.</string>
     <!-- Message displayed when app is searching a location for hotels -->
     <string name="progress_searching_hotels_hundreds">수백 개 호텔 중에서 찾는 중이에요!</string>
     <!-- Message displayed when app is searching for a particular hotel -->
@@ -2452,7 +2452,7 @@
     <!-- Message displayed when no hotel rooms are available -->
     <string name="error_no_hotel_rooms_available">이용 가능한 객실이 없습니다.</string>
     <!-- Message displayed when all the hotel rooms at a hotel are sold out -->
-    <string name="error_hotel_is_now_sold_out_expedia">죄송합니다. 이 호텔은 익스피디아에서 더 이상 이용하실 수 없습니다.</string>
+    <string name="error_hotel_is_now_sold_out_TEMPLATE">죄송합니다. 이 호텔은 더 이상 {brand}에서 제공되지 않습니다.</string>
 
     <!-- Suggestion adapter -->
     <!-- Suggestion to search the user's current location (instead of entering a specific place) -->
@@ -2465,6 +2465,8 @@
     <string name="per_night">/1박</string>
     <!-- The label for abbreviated price per night - "$120/nt", for example -->
     <string name="per_nt">/1박</string>
+    <!-- The label for abbreviated price per night - "$120/nt", for example -->
+    <string name="per_nt_TEMPLATE">{price}/1박</string>
     <!-- Label shown when a hotel has no user ratings -->
     <string name="not_rated">평점 없음</string>
     <!-- Label indicating the percent savings for booking this hotel.  %2.0f is the savings amount. -->
@@ -2516,10 +2518,14 @@
     <string name="minus_x_percent">-%2.0f%%</string>
     <!-- Recommended string shown in hotel details -->
     <string name="x_percent_guests_recommend">고객 중 %2.0f%%가 이 호텔을 추천하셨습니다!</string>
+    <!-- new material Hotel results cell guest rating -->
+    <string name="customer_rating_percent_Template">{rating}{percent}</string>
+    <!-- new material Hotel results cell guest recommend-->
+    <string name="guest_recommend">명의 고객이 추천</string>
 
     <!-- Amenity strings -->
     <!-- Text that indicates no amenities at this property -->
-    <string name="AmenityNone">편의시설 제공 안 함</string>
+    <string name="AmenityNone">제공된 편의 시설 없음</string>
     <!-- Business center amenity -->
     <string name="AmenityBusinessCenter">비즈니스 센터</string>
     <!-- Fitness center amenity -->
@@ -2635,7 +2641,7 @@
     <string name="etp_pay_later_payment_info_text">결제 정보는 예약을 유지하는 데만 필요합니다.</string>
     <string name="etp_pay_later_cancellation_text">호텔의 취소 마감까지 무료 취소가 가능합니다.</string>
     <string name="etp_pay_now_option_text">지금 온라인 결제</string>
-    <string name="etp_pay_now_charges_text">익스피디아가 결제 세부 정보를 처리합니다.</string>
+    <string name="etp_pay_now_charges_text_TEMPLATE">{brand}에서 고객님의 결제 세부 정보를 처리합니다.</string>
     <string name="etp_pay_now_currency_text_TEMPLATE">고객님은 고객님께서 사용하시는 통화(%s)로 결제하시게 됩니다.</string>
     <string name="etp_pay_now_cancellation_text">호텔의 취소 마감까지 무료 취소가 가능합니다.</string>
     <string name="etp_select_room">객실 선택</string>
@@ -2726,7 +2732,7 @@
     <!-- Itinerary number label -->
     <string name="itinerary_number">일정 번호</string>
     <!-- Contact info for a country with a known support line where %s represents the phone number -->
-    <string name="contact_phone_template">예약 관련 문의 사항이 있으시면 익스피디아 전화 %s번으로 연락해 주세요.</string>
+    <string name="contact_phone_TEMPLATE">예약 관련 문의 사항이 있으시면 {brand}({phone})에 전화해 주시기 바랍니다.</string>
 
 
     <!-- Rate template strings -->
@@ -2759,7 +2765,7 @@
     <!-- Label for Expedia +gold rewards program name -->
     <string name="Expedia_plus_gold">익스피디아 +골드</string>
     <!-- Label for signin screen -->
-    <string name="expedia_account">익스피디아 계정</string>
+    <string name="account_TEMPLATE">{brand} 계정</string>
     <!-- Label for loading user profile from Expedia -->
     <string name="loading_brand_account_TEMPLATE">{brand} 계정 가져오는 중</string>
     <!-- Label for password recovery -->
@@ -2833,25 +2839,25 @@
     <!-- Label for "Booking Support" button in info page -->
     <string name="booking_support">예약 지원</string>
     <!-- Title for different ways to connect to Expedia -->
-    <string name="contact_expedia_via">익스피디아 고객센터 문의 방법</string>
+    <string name="contact_via_TEMPLATE">다음을 통해 {brand}에 연락</string>
     <!-- Contact Expedia via phone -->
     <string name="contact_expedia_phone">전화</string>
     <!-- Contact Expedia via website -->
     <string name="contact_expedia_website">웹사이트</string>
     <!-- Label for "Expedia website" button in info page -->
-    <string name="expedia_website">익스피디아 웹사이트</string>
+    <string name="website_TEMPLATE">{brand} 웹사이트</string>
     <!-- Label for "app support" button in info page -->
-    <string name="app_support">앱 기술 지원</string>
+    <string name="app_support_TEMPLATE">앱 지원</string>
     <!-- Label for link to terms and conditions -->
     <string name="info_label_terms_conditions">이용약관</string>
     <!-- Label for link to privacy policy -->
     <string name="info_label_privacy_policy">개인정보 보호정책</string>
     <!-- Copyright information -->
-    <string name="copyright_TEMPLATE">© Copyright 2012-%1$s Expedia, Inc.\nAll rights reserved.</string>
+    <string name="copyright_TEMPLATE">© Copyright 2012-{year} {brand}, Inc.\nAll rights reserved.</string>
     <!-- Dialog Title telling the user they have been signed of their account and all data saved about them has been removed -->
     <string name="dialog_title_signed_out_and_cleared_private_data">로그아웃되고 데이터가 삭제되었습니다.</string>
     <!-- Dialog Message telling the user they have been signed of their account and all data saved about them has been removed -->
-    <string name="dialog_message_signed_out_and_cleared_private_data">익스피디아 계정에서 로그아웃되었습니다. 저장된 모든 청구 및 연락처 정보가 삭제되었습니다.</string>
+    <string name="dialog_message_signed_out_and_cleared_private_data_TEMPLATE">{brand} 계정에서 로그아웃되었습니다. 저장된 모든 청구 및 연락처 정보가 삭제되었습니다.</string>
     <!-- Dialog Title telling the user they have been signed of their account and all data saved about them has been removed -->
     <string name="dialog_title_cleared_private_data">개인 정보가 삭제되었습니다.</string>
     <!-- Dialog Message telling the user they have been signed of their account and all data saved about them has been removed -->
@@ -2949,7 +2955,7 @@
     <!-- Display for distances.  1$ is a distance, 2$ is a unit, e.g. "5 miles away" -->
     <string name="distance_template">%1$s%2$s 거리</string>
     <!-- Display for distances - but abbreviated, for space.  1$ is a distance, 2$ is a unit, e.g. "5 mi" -->
-    <string name="distance_template_short">%1$s%2$s</string>
+    <string name="distance_template_short">%1$s %2$s</string>
 
     <!-- Menu strings -->
     <!-- Label for "settings" menu item. -->
@@ -3570,5 +3576,7 @@
 
     <!-- Used in hotel search for specifying traveler -->
     <string name="child_age_label">각 아동의 나이 선택</string>
+
+    <string name="lob_not_supported_error_message">죄송합니다. 고객님의 위치에서는 아직 {lob} 예약을 이용하실 수 없습니다.</string>
 
 </resources>
