--- a/project/src/samsung/res/values/strings.xml
+++ b/project/src/samsung/res/values/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <!-- Label for skip app intro -->
     <string name="app_intro_skip">SKIP</string>
     <!-- Label for next app intro -->
@@ -9,4 +8,8 @@
     <string name="app_intro_collections_title">Discover new destinations from Samsung collections</string>
     <!-- Hotels savings app intro title -->
     <string name="app_intro_hotels_savings_title">Get exclusive savings from selected hotels for Samsung owners</string>
+    <!-- Hotels Search -->
+    <string name="search_hotels">Search hotels</string>
+    <!-- Activities Search -->
+    <string name="search_activities">Search activities</string>
 </resources>
